tests/sqllogic/any/pg/simple/copy.test
hash-threshold 100

control substitution on

statement ok
CREATE TABLE tindex
(
  id INTEGER PRIMARY KEY,
  name TEXT
);


statement ok
CREATE TABLE clickclack
(
  id INTEGER PRIMARY KEY,
  name TEXT
);


statement count 3
INSERT INTO tindex VALUES (1, 'vedernikoff'), (2, 'pavelvi'), (3, 'babsky');


statement count 3
COPY tindex TO '/tmp/${__DATABASE__}_quit_low_salary.csv';


statement count 3
COPY clickclack FROM '/tmp/${__DATABASE__}_quit_low_salary.csv';


query
SELECT * FROM clickclack ORDER BY 1, 2;
----
id	name
1	vedernikoff
2	pavelvi
3	babsky


statement count 3
DELETE FROM clickclack;


statement count 2
COPY clickclack FROM '/tmp/${__DATABASE__}_quit_low_salary.csv' WHERE id != 2;


query
SELECT * FROM clickclack ORDER BY 1, 2;
----
id	name
1	vedernikoff
3	babsky


statement count 2
DELETE FROM clickclack;


statement count 1
COPY (SELECT * FROM tindex ORDER BY 1 DESC LIMIT 1) TO '/tmp/${__DATABASE__}_quit_low_salary.csv';


statement count 1
COPY clickclack FROM '/tmp/${__DATABASE__}_quit_low_salary.csv';


query
SELECT * FROM clickclack;
----
id	name
3	babsky


statement count 1
DELETE FROM clickclack;


statement ok
CREATE TABLE reversed
(
  name TEXT PRIMARY KEY,
  id INTEGER
);


statement count 3
COPY tindex TO '/tmp/${__DATABASE__}_lmao' WITH (FORMAT CSV, HEADER TRUE);


skipif postgres
query
EXPLAIN COPY reversed(id, name) FROM '/tmp/${__DATABASE__}_lmao' WITH (FORMAT CSV, HEADER TRUE);
----
QUERY PLAN
┌───────────────────────────┐
│         EXTENSION         │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             #1            │
│             #0            │
│                           │
│          ~4 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│          READ_CSV         │
│    ────────────────────   │
│     Function: READ_CSV    │
│                           │
│        Projections:       │
│             id            │
│            name           │
│                           │
│          ~4 rows          │
└───────────────────────────┘


skipif postgres
query
EXPLAIN COPY tindex TO '/tmp/${__DATABASE__}_lmao' WITH (FORMAT CSV, HEADER TRUE);
----
QUERY PLAN
┌───────────────────────────┐
│        COPY_TO_FILE       │
│    ────────────────────   │
│        FORMAT: CSV        │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│   ROCKSDB_TABLE_FULLSCAN  │
│    ────────────────────   │
│       Table: tindex       │
│                           │
│        Projections:       │
│             id            │
│            name           │
│                           │
│          ~3 rows          │
└───────────────────────────┘


skipif postgres
skipif serenedb # TODO(Pasha) support options better
statement error
EXPLAIN COPY tindex TO '/tmp/${__DATABASE__}_lmao' WITH (EXPLAIN 'blahblah');
----
db error: ERROR: option "blahblah" not recognized
HINT: Use WITH (HELP) to see available options


skipif postgres
skipif serenedb # TODO(Pasha) support options better
statement error
EXPLAIN COPY tindex TO '/tmp/${__DATABASE__}_lmao' WITH (EXPLAIN 'logikal');
----
db error: ERROR: option "logikal" not recognized, did you mean "logical"?
HINT: Use WITH (HELP) to see available options


statement count 3
COPY reversed(id, name) FROM '/tmp/${__DATABASE__}_lmao' WITH (FORMAT CSV, HEADER TRUE);


query
SELECT * FROM reversed ORDER BY 1, 2;
----
name	id
babsky	3
pavelvi	2
vedernikoff	1


statement count 3
DELETE FROM reversed;


statement count 3
COPY tindex(name, id) TO '/tmp/${__DATABASE__}_lmao';


statement count 3
COPY reversed FROM '/tmp/${__DATABASE__}_lmao';


query
SELECT * FROM reversed ORDER BY 1, 2;
----
name	id
babsky	3
pavelvi	2
vedernikoff	1


statement ok
CREATE TABLE varus
(
  id INTEGER,
  name TEXT,
  iq INTEGER DEFAULT 1000 - 7,
  iamdegenereted INTEGER GENERATED ALWAYS AS (iq + id + 228) STORED
);


statement count 3
COPY varus(name, id) FROM '/tmp/${__DATABASE__}_lmao';


statement count 3
COPY varus(name, id) FROM '/tmp/${__DATABASE__}_lmao';


statement count 3
COPY varus(name, id) FROM '/tmp/${__DATABASE__}_lmao';


query
SELECT * FROM varus ORDER BY 1, 2, 3, 4;
----
id	name	iq	iamdegenereted
1	vedernikoff	993	1222
1	vedernikoff	993	1222
1	vedernikoff	993	1222
2	pavelvi	993	1223
2	pavelvi	993	1223
2	pavelvi	993	1223
3	babsky	993	1224
3	babsky	993	1224
3	babsky	993	1224


statement error
COPY varus(iamdegenereted) FROM '/tmp/${__DATABASE__}_lmao';


skipif postgres
skipif serenedb # TODO(Pasha) support options better
statement error
COPY varus(name, id) FROM '/tmp/${__DATABASE__}_lmao' WITH (LABUDABUDABDAB rick);
----
db error: ERROR: option "labudabudabdab" not recognized
HINT: Use WITH (HELP) to see available options


skipif postgres
skipif serenedb # TODO(Pasha) support options better
statement error
COPY varus(name, id) FROM '/tmp/${__DATABASE__}_lmao' WITH (HELL true);
----
db error: ERROR: option "hell" not recognized, did you mean "help"?
HINT: Use WITH (HELP) to see available options


statement count 100000
COPY
(
  SELECT *
  FROM
    generate_series(1, 10) as iq,
    generate_series(1, 100) as pencil_size,
    generate_series(1, 100) as weight
) TO '/tmp/${__DATABASE__}_arelav' WITH (FORMAT CSV, HEADER 1);


statement ok
CREATE TABLE arelav
(
  lmao INTEGER,
  kek INTEGER,
  kal INTEGER
);


statement count 100000
COPY arelav FROM '/tmp/${__DATABASE__}_arelav' WITH (FORMAT CSV, HEADER 1);


query
SELECT * FROM arelav ORDER BY 1, 2, 3;
----
300003 values hashing to 568009c5b2055554ab4bd827ebe85b75


statement count 100
COPY
  (SELECT x, y::text FROM generate_series(1, 10) as g1(x), generate_series(1, 10) as g2(y))
TO
  '/tmp/${__DATABASE__}_deadinside.tsv'
WITH (HEADER TRUE);


statement ok
CREATE TABLE donsimon
(
  vv INTEGER,
  marmishka TEXT
);


statement count 100
COPY donsimon FROM '/tmp/${__DATABASE__}_deadinside.tsv' (ON_ERROR IGNORE, REJECT_LIMIT 1);


query
SELECT * FROM donsimon ORDER BY 1, 2;
----
202 values hashing to 023b58aa7a21f0c2699ccde3252f77b1


statement error
COPY donsimon FROM '/tmp/${__DATABASE__}_deadinside.tsv' (ON_ERROR IGNORE, REJECT_LIMIT -1);
----
db error: ERROR: REJECT_LIMIT (-1) must be greater than zero


onlyif serenedb
statement error
COPY donsimon FROM '/tmp/${__DATABASE__}_deadinside.tsv' (ON_ERROR labudadadab);
----
db error: ERROR: invalid value for parameter "on_error": "labudadadab"


statement count 10
COPY (SELECT * FROM generate_series(2, 11)) TO '/tmp/${__DATABASE__}_deadinside.tsv';


statement ok
CREATE TABLE biksalen(kek BOOLEAN);


statement error
COPY biksalen FROM '/tmp/${__DATABASE__}_deadinside.tsv' (ON_ERROR IGNORE, REJECT_LIMIT 9);


statement count 0
COPY biksalen FROM '/tmp/${__DATABASE__}_deadinside.tsv' (ON_ERROR IGNORE, REJECT_LIMIT 10);


statement count 0
COPY biksalen FROM '/tmp/${__DATABASE__}_deadinside.tsv' (ON_ERROR IGNORE);


statement ok
COPY (SELECT * FROM generate_series(2, 11)) TO '/tmp/${__DATABASE__}_deadinside.tsv' WITH (HEADER TRUE);


statement error
COPY biksalen FROM '/tmp/${__DATABASE__}_deadinside.tsv' (ON_ERROR STOP);


statement error
COPY biksalen FROM '/tmp/${__DATABASE__}_deadinside.tsv';


statement error
COPY biksalen FROM '/tmp/${__DATABASE__}_deadinside.tsv' WITH (HEADER ON);


# header check also check that generated key is not inserted
statement ok
CREATE TABLE header_eater (header1 TEXT, header2 TEXT);


statement count 1
COPY (SELECT 1 as header, 2 as header) TO '/tmp/${__DATABASE__}_headers.tsv' WITH (HEADER 1)


skipif serenedb # TODO(Pasha) copy option to disable sniffer? explicit say about header?
statement count 2
COPY header_eater FROM '/tmp/${__DATABASE__}_headers.tsv';


skipif serenedb # TODO(Pasha) copy option to disable sniffer? explicit say about header?
query
SELECT * FROM header_eater;
----
header1	header2
header	header
1	2


statement error
COPY (SELECT 1) TO '/tmp/${__DATABASE__}_sayge.tsv' WITH (FORMAT)


statement ok
CREATE TABLE ts_test (id INTEGER PRIMARY KEY, ts TIMESTAMP, d DATE);


statement count 2
INSERT INTO ts_test VALUES (1, '2024-01-15 10:30:45', '2024-01-15'), (2, '2024-12-31 23:59:59', '2024-12-31');


statement count 2
COPY ts_test TO '/tmp/${__DATABASE__}_ts_test.csv' WITH (FORMAT CSV);


statement ok
CREATE TABLE ts_test_copy (id INTEGER PRIMARY KEY, ts TIMESTAMP, d DATE);


statement count 2
COPY ts_test_copy FROM '/tmp/${__DATABASE__}_ts_test.csv' WITH (FORMAT CSV);


query
SELECT * FROM ts_test_copy ORDER BY 1;
----
id	ts	d
1	2024-01-15 10:30:45	2024-01-15
2	2024-12-31 23:59:59	2024-12-31


# wanna detect format by file extension
statement count 10
COPY (SELECT 'imarelav', * FROM generate_series(1, 10)) TO '/tmp/${__DATABASE__}_arelav_consuma.csv';


statement ok
CREATE TABLE arelav_consumer
(
  eater TEXT
);


onlyif serenedb
statement count 10
COPY arelav_consumer FROM '/tmp/${__DATABASE__}_arelav_consuma.csv' WITH (FORMAT TEXT);


onlyif serenedb
query
SELECT * FROM arelav_consumer;
----
eater
imarelav,1
imarelav,2
imarelav,3
imarelav,4
imarelav,5
imarelav,6
imarelav,7
imarelav,8
imarelav,9
imarelav,10


statement error
COPY arelav_consumer FROM '/tmp/${__DATABASE__}_arelav_consuma.csv' WITH (FORMAT 1);


skipif serenedb # TODO(Pasha) support options better
skipif postgres
statement error
COPY arelav_consumer FROM '/tmp/${__DATABASE__}_arelav_consuma.csv' WITH (LOG_VERBOSITY 228.228);
----
db error: ERROR: COPY LOG_VERBOSITY "228.228" not recognized
HINT: Allowed values: SILENT, DEFAULT, VERBOSE


onlyif serenedb
statement error
COPY arelav_consumer FROM '/tmp/${__DATABASE__}_arelav_consuma.parquet' WITH (FORMAT PARQUET, DELIMITER ',');


# JSON Lines: structured round-trip via DuckDB's native json copy function.
# COPY TO (FORMAT json) serializes rows as JSON objects (one per line).
# COPY FROM (FORMAT json) parses JSON keys into table columns.

onlyif serenedb
statement ok
CREATE TABLE json_source (kostya BIGINT, vedernikoff TEXT);

onlyif serenedb
statement ok
INSERT INTO json_source VALUES (666, 'clickclack'), (993, 'deadinside'), (228, 'babsky');

onlyif serenedb
statement count 3
COPY json_source TO '/tmp/${__DATABASE__}_kostya.jsonl' (FORMAT json);


# .jsonl extension auto-detected as JSON format
onlyif serenedb
statement ok
CREATE TABLE json_target (kostya BIGINT, vedernikoff TEXT);

onlyif serenedb
statement count 3
COPY json_target FROM '/tmp/${__DATABASE__}_kostya.jsonl';

onlyif serenedb
query
SELECT * FROM json_target ORDER BY 1;
----
kostya	vedernikoff
228	babsky
666	clickclack
993	deadinside


onlyif serenedb
statement count 3
DELETE FROM json_target;


# explicit FORMAT json
onlyif serenedb
statement count 3
COPY json_target FROM '/tmp/${__DATABASE__}_kostya.jsonl' WITH (FORMAT 'JSON');

onlyif serenedb
query
SELECT * FROM json_target ORDER BY 1;
----
kostya	vedernikoff
228	babsky
666	clickclack
993	deadinside


onlyif serenedb
statement count 3
DELETE FROM json_target;


# .ndjson extension auto-detection (round-trip)
onlyif serenedb
statement ok
CREATE TABLE json_iq (iq BIGINT);

onlyif serenedb
statement ok
INSERT INTO json_iq VALUES (322), (993), (1337);

onlyif serenedb
statement count 3
COPY json_iq TO '/tmp/${__DATABASE__}_vedernikoff.ndjson' (FORMAT json);

onlyif serenedb
statement ok
CREATE TABLE json_iq_copy (iq BIGINT);

onlyif serenedb
statement count 3
COPY json_iq_copy FROM '/tmp/${__DATABASE__}_vedernikoff.ndjson';

onlyif serenedb
query
SELECT * FROM json_iq_copy ORDER BY 1;
----
iq
322
993
1337

statement ok
DELETE FROM arelav_consumer;

query
SELECT * FROM arelav_consumer;
----
eater


skipif postgres
query
EXPLAIN ANALYZE COPY arelav_consumer FROM '/tmp/${__DATABASE__}_arelav_consuma.csv';
----
QUERY PLAN
┌─────────────────────────────────────┐
│┌───────────────────────────────────┐│
││    Query Profiling Information    ││
│└───────────────────────────────────┘│
└─────────────────────────────────────┘
EXPLAIN ANALYZE COPY arelav_consumer FROM '<slt:ignore>_arelav_consuma.csv';
┌────────────────────────────────────────────────┐
│┌──────────────────────────────────────────────┐│
││              Total Time: <slt:ignore>        ││
│└──────────────────────────────────────────────┘│
└────────────────────────────────────────────────┘
┌───────────────────────────┐
│           QUERY           │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│      EXPLAIN_ANALYZE      │
│    ────────────────────   │
│                           │
│           0 rows          │
│           <slt:ignore>    │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         EXTENSION         │
│    ────────────────────   │
│                           │
│           1 row           │
│           <slt:ignore>    │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         TABLE_SCAN        │
│    ────────────────────   │
│     Function: READ_CSV    │
│     Projections: eater    │
│    Total Files Read: 1    │
│                           │
│        Filename(s):       │
<slt:ignore>
<slt:ignore>
<slt:ignore>
│                           │
│                           │
│                           │
│          10 rows          │
│           <slt:ignore>    │
└───────────────────────────┘


skipif postgres
query
SELECT eater FROM arelav_consumer;
----
eater
imarelav,1
imarelav,2
imarelav,3
imarelav,4
imarelav,5
imarelav,6
imarelav,7
imarelav,8
imarelav,9
imarelav,10


skipif postgres
skipif serenedb # TODO(Pasha) support options better
statement error
COPY arelav_consumer FROM '/tmp/${__DATABASE__}_arelav_consuma.csv' WITH (HELP);
----
db error: ERROR: 
Explain, use WITH (EXPLAIN 'option_name'):
Explain:
  Plans:
    all_plans (boolean) [default: false] - Show all plan stages
    logical (boolean) [default: false] - Show logical plan
    physical (boolean) [default: false] - Show physical plan
    execution (boolean) [default: false] - Show execution plan
    initial_query_graph (boolean) [default: false] - Show initial query graph
    final_query_graph (boolean) [default: false] - Show final query graph
  Parameters:
    analyze (boolean) [default: false] - Execute the query and show run times
    registers (boolean) [default: false] - Show internal column register names in all plan outputs
    oneline (boolean) [default: false] - One-line output format for physical plan
    cost (boolean) [default: false] - Show estimated costs in physical plan
Copy:
  Storage:
    Common:
      storage (enum) [default: Local, values: Local, S3] - Storage backend
    S3:
      Authentication:
        s3_access_key (string) - AWS access key ID (used with s3_secret_key)
        s3_secret_key (string) - AWS secret access key (used with s3_access_key)
        s3_iam_role (string) - IAM role ARN (instead of access/secret keys)
        s3_use_instance_credentials (boolean) [default: false] - Use EC2 instance credentials
      Connection:
        s3_endpoint (string) - S3-compatible endpoint URL
        s3_region (string) - AWS region
        s3_path_style_access (boolean) [default: true] - Use path-style S3 URLs
        s3_ssl_enabled (boolean) [default: false] - Enable SSL for S3 connections
    Local:
      (no additional options)
  Format:
    Common:
      format (enum) [default: Text, values: Text, Csv, Parquet, Dwrf, Orc, Json] - File format
    Text:
      delimiter (character) [default: \t] - Column delimiter character
      escape (character) [default: \\] - Escape character
      null (string) [default: \N] - String representing NULL
      header (boolean) [default: false] - First line is a header row
      on_error (enum) [default: Stop, values: Stop, Ignore] - Error handling
      reject_limit (integer) [default: 0] - Max rows to skip (requires on_error = ignore)
      log_verbosity (enum) [default: Default, values: Silent, Default, Verbose] - Logging level
    CSV:
      delimiter (character) [default: ,] - Column delimiter character
      escape (character) [default: "] - Escape character
      null (string) - String representing NULL
      header (boolean) [default: false] - First line is a header row
      on_error (enum) [default: Stop, values: Stop, Ignore] - Error handling
      reject_limit (integer) [default: 0] - Max rows to skip (requires on_error = ignore)
      log_verbosity (enum) [default: Default, values: Silent, Default, Verbose] - Logging level
    Parquet:
      (no additional options)
    DWRF:
      (no additional options)
    ORC:
      (no additional options)
    JSON:
      (no additional options)
